--- a/_includes/archive-single-pubjournal.html
+++ b/_includes/archive-single-pubjournal.html
@@ -62,14 +62,14 @@
 		  {{ post.comment }}.&nbsp;
 		{% endif %}
 		{% if post.paperurl %}
-		  <a href="{{ post.paperurl }}">[pdf]</a>
+		  <a href="{{ post.paperurl }}" target="_blank">[pdf]</a>
 		{% endif %}
 		(Citation:&nbsp;
 		{% if post.plain %}
-		  <a href="{{ post.plain }}">[Plain Text]</a>
+		  <a href="{{ post.plain }}" target="_blank">[Plain Text]</a>
 		{% endif %}
 		{% if post.bibtex %}
-		  <a href="{{ post.bibtex }}">[BibTeX]</a>
+		  <a href="{{ post.bibtex }}" target="_blank">[BibTeX]</a>
 		{% endif %})
 	</li></p>
 	
