Update the punctuation after journal date

--- a/_includes/archive-single-pubjournal-selected.html
+++ b/_includes/archive-single-pubjournal-selected.html
@@ -51,7 +51,7 @@
 				pages {{ post.accept_rate }},&nbsp;
 			  {% endif %}
 			  {% if post.mydate %}
-				{{ post.mydate }},&nbsp;
+				{{ post.mydate }}.&nbsp;
 			  {% endif %}
 			{% else %}
 			  {% if post.mydate %}
