--- a/_includes/archive-single-pubjournal.html
+++ b/_includes/archive-single-pubjournal.html
@@ -50,7 +50,7 @@
 		    pages {{ post.accept_rate }},&nbsp;
 		  {% endif %}
 		  {% if post.mydate %}
-		    {{ post.mydate }},&nbsp;
+		    {{ post.mydate }}.&nbsp;
 		  {% endif %}
 		{% else %}
 		  {% if post.mydate %}
