--- a/_includes/archive-single-pubjournal-selected.html
+++ b/_includes/archive-single-pubjournal-selected.html
@@ -48,14 +48,14 @@
 				No. {{ post.number }},&nbsp;
 			  {% endif %}
 			  {% if post.pages %}
-				pages {{ post.accept_rate }},&nbsp;
+				pages {{ post.pages }},&nbsp;
 			  {% endif %}
 			  {% if post.mydate %}
 				{{ post.mydate }}.&nbsp;
 			  {% endif %}
 			{% else %}
 			  {% if post.mydate %}
-				{{ post.mydate }},&nbsp;
+				{{ post.mydate }}.&nbsp;
 			  {% endif %}
 			  Accepted.&nbsp;
 			{% endif %}
