--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,4 @@
 <!-- start custom footer snippets -->
 <!--<a href="/sitemap/">Sitemap</a>-->
+Page updated on 2019.07.09.
 <!-- end custom footer snippets -->
