--- a/_includes/archive-single-pubjournal.html
+++ b/_includes/archive-single-pubjournal.html
@@ -59,7 +59,7 @@
 		  Accepted.&nbsp;
 		{% endif %}
 		{% if post.comment %}
-		  {{ post.comment }}.&nbsp;
+		  <font color="red">{{ post.comment }}</font>&nbsp;
 		{% endif %}
 		{% if post.paperurl %}
 		  <a href="{{ post.paperurl }}" target="_blank">[pdf]</a>
