--- a/_includes/archive-single-pubjournal-selected.html
+++ b/_includes/archive-single-pubjournal-selected.html
@@ -60,7 +60,7 @@
 			  Accepted.&nbsp;
 			{% endif %}
 			{% if post.comment %}
-			  <font color="red">{{ post.comment }}</font>&nbsp;
+			  <font color="#FF0000">{{ post.comment }}</font>&nbsp;
 			{% endif %}
 			{% if post.paperurl %}
 			  <a href="{{ post.paperurl }}" target="_blank">[pdf]</a>
