--- a/_includes/archive-single-pub-selected.html
+++ b/_includes/archive-single-pub-selected.html
@@ -52,7 +52,7 @@
 			  Acceptance rate: {{ post.accept_rate }}.&nbsp;
 			{% endif %}
 			{% if post.comment %}
-			  {{ post.comment }}.&nbsp;
+			  <font color="#FF0000">{{ post.comment }}</font>&nbsp;
 			{% endif %}
 			{% if post.paperurl %}
 			  <a href="{{ post.paperurl }}" target="_blank">[pdf]</a>
