--- a/_includes/archive-single-pub-selected.html
+++ b/_includes/archive-single-pub-selected.html
@@ -29,7 +29,7 @@
 
 		<p><li>
 			{% if post.sname %}
-			  <font color="#262685">[{{ post.sname }}]</font>&nbsp;
+			  <font color="#A30000">[{{ post.sname }}]</font>&nbsp;
 			{% endif %}
 			{% if post.author %}
 			  {{ post.author }}.&nbsp;
