--- a/_includes/archive-single-pubjournal.html
+++ b/_includes/archive-single-pubjournal.html
@@ -28,7 +28,7 @@
 
 	<p><li>
 		{% if post.sname %}
-		  [<i>{{ post.sname }}</i>]&nbsp;
+		  <font color="#A30000">[{{ post.sname }}]</font>&nbsp;
 		{% endif %}
 		{% if post.author %}
 		  {{ post.author }}.&nbsp;
