--- a/_includes/archive-single-pubjournal.html
+++ b/_includes/archive-single-pubjournal.html
@@ -28,44 +28,44 @@
 
 	<p><li>
 		{% if post.sname %}
-		  <font color="#A30000">[{{ post.sname }}]</font>&nbsp;
+		  <font color="#A30000">[{{ post.sname }}]</font>
 		{% endif %}
 		{% if post.author %}
-		  {{ post.author }}.&nbsp;
+		  {{ post.author }}.
 		{% else %}
-		  {{ Not defined }}.&nbsp;
+		  {{ Not defined }}.
 		{% endif %}
 		{% if post.title %}
-		  "{{ post.title }}".&nbsp;
+		  "{{ post.title }}".
 		{% endif %}
 		{% if post.fname %}
-		  <i>{{ post.fname }}</i>,&nbsp;
+		  <i>{{ post.fname }}</i>,
 		{% endif %}
 		{% if post.volume %}
-		  Vol. {{ post.volume }},&nbsp;
+		  Vol. {{ post.volume }},
 		  {% if post.number %}
-		    No. {{ post.number }},&nbsp;
+		    No. {{ post.number }},
 		  {% endif %}
 		  {% if post.pages %}
-		    pages {{ post.pages }},&nbsp;
+		    pages {{ post.pages }},
 		  {% endif %}
 		  {% if post.mydate %}
-		    {{ post.mydate }}.&nbsp;
+		    {{ post.mydate }}.
 		  {% endif %}
 		{% else %}
 		  {% if post.mydate %}
-		    {{ post.mydate }}.&nbsp;
+		    {{ post.mydate }}.
 		  {% endif %}
-		  Accepted.&nbsp;
+		  Accepted.
 		{% endif %}
 		{% if post.comment %}
-		  <font color="#FF0000">{{ post.comment }}</font>&nbsp;
+		  <font color="#FF0000">{{ post.comment }}</font>
 		{% endif %}
 		{% if post.paperurl %}
 		  <a href="{{ post.paperurl }}" target="_blank">[pdf]</a>
 		{% endif %}
 		{% if post.bibtex %}
-			(Citation:&nbsp;
+			(Citation:
 			{% if post.plain %}
 			  <a href="{{ post.plain }}" target="_blank">[Plain Text]</a>
 			{% endif %}
