--- a/_includes/archive-single-pubjournal.html
+++ b/_includes/archive-single-pubjournal.html
@@ -28,7 +28,7 @@
 
 	<p><li>
 		{% if post.sname %}
-		  <font color="#A30000">[{{ post.sname }}]</font>
+		  <font color="#3333B2">[{{ post.sname }}]</font>
 		{% endif %}
 		{% if post.author %}
 		  {{ post.author }}.
