change color and simplify journal/conf files

--- a/_includes/archive-single-pub.html
+++ b/_includes/archive-single-pub.html
@@ -12,23 +12,24 @@
   {% assign title = post.title %}
 {% endif %}
 
+
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
-    {% if include.type == "grid" and teaser %}
-      <div class="archive__item-teaser">
-        <img src=
-          {% if teaser contains "://" %}
-            "{{ teaser }}"
-          {% else %}
-            "{{ teaser | prepend: "/images/" | prepend: base_path }}"
-          {% endif %}
-          alt="">
-      </div>
-    {% endif %}
+	{% if include.type == "grid" and teaser %}
+	  <div class="archive__item-teaser">
+		<img src=
+		  {% if teaser contains "://" %}
+			"{{ teaser }}"
+		  {% else %}
+			"{{ teaser | prepend: "/images/" | prepend: base_path }}"
+		  {% endif %}
+		  alt="">
+	  </div>
+	{% endif %}
 
 	<p><li>
 		{% if post.sname %}
-		  <font color="#3333B2">[{{ post.sname }}]</font>
+		  [<font color="#CE4337">{{ post.sname }}</font>]
 		{% endif %}
 		{% if post.author %}
 		  {{ post.author }}.
@@ -38,20 +39,43 @@
 		{% if post.title %}
 		  "{{ post.title }}".
 		{% endif %}
-		{% if post.fname %}
-		  In <i>{{ post.fname }}</i>,
-		{% endif %}
-		{% if post.place %}
-		  {{ post.place }},
-		{% endif %}
-		{% if post.mydate %}
-		  {{ post.mydate }}.
-		{% endif %}
-		{% if post.accept_rate %}
-		  Acceptance rate: {{ post.accept_rate }}.
+		{% if post.collection == "confpublications" %}
+			{% if post.fname %}
+				In <i>{{ post.fname }}</i>,
+			{% endif %}
+			{% if post.place %}
+			  {{ post.place }},
+			{% endif %}
+			{% if post.mydate %}
+			  {{ post.mydate }}.
+			{% endif %}
+			{% if post.accept_rate %}
+			  Acceptance rate: {{ post.accept_rate }}.
+			{% endif %}
+		{% else %}
+			{% if post.fname %}
+				<i>{{ post.fname }}</i>,
+			{% endif %}
+			{% if post.volume %}
+				Vol. {{ post.volume }},
+				{% if post.number %}
+					No. {{ post.number }},
+				{% endif %}
+				{% if post.pages %}
+					pages {{ post.pages }},
+				{% endif %}
+				{% if post.mydate %}
+					{{ post.mydate }}.
+				{% endif %}
+			{% else %}
+				{% if post.mydate %}
+					{{ post.mydate }}.
+				{% endif %}
+				Accepted.
+			{% endif %}
 		{% endif %}
 		{% if post.comment %}
-		  <font color="#FF0000">{{ post.comment }}</font>
+		  <font color="#CE4337">{{ post.comment }}</font>
 		{% endif %}
 		{% if post.paperurl %}
 		  <a href="{{ post.paperurl }}" target="_blank">[pdf]</a>
